src/test/deca/context/invalid/while_cond.deca

// Description :
// Condition de while non booléenne 
//
// Resultats :
// Erreur contextuelle
// condition de while doit être boolean
//

{
  while (1) {
    print(1);
  }
}